<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/_6sdp"
    android:background="@drawable/start_quiz_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz_dialog_title"
        android:layout_gravity="center"
        android:gravity="start"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tv_what_are_the_selected_chapters"
        />

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz_dialog_total_questions"
        android:id="@+id/tv_start_exam_dialog_real_total"
        android:gravity="start"
        android:textSize="@dimen/_16sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorPrimary"
        android:layout_margin="@dimen/_10sdp"
        />

    <LinearLayout
        android:layout_marginHorizontal="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:text="@string/quiz_start_dialog_user_total_text"
            android:drawableLeft="@drawable/ic_baseline_local_library_24"
            android:drawablePadding="@dimen/_7sdp"
            android:layout_width="0dp"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/et_start_quiz_exam_user_total"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:text="15"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:paddingStart="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:text="@string/quiz_start_dialog_user_total_unit_text"
            android:layout_width="0dp"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_7sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:drawableLeft="@drawable/ic_baseline_timer_24"
            android:drawablePadding="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/quiz_start_dialog_user_time_text"
            android:layout_width="0dp"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/et_start_quiz_exam_user_time"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:text="15"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:paddingStart="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="1"
            android:text="@string/quiz_start_dialog_user_time_unit_text"
            android:layout_width="0dp"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_start_text"
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        android:drawablePadding="@dimen/_8sdp"
        android:drawableRight="@drawable/ic_start_right_arrow"
        android:foreground="?selectableItemBackground"
        android:paddingVertical="@dimen/_3sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="src_over"
        android:id="@+id/btn_start_quiz_exam_dialog_start"
        />



</LinearLayout>