<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_weight="1.75"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:text="1"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:paddingTop="@dimen/_4sdp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/firacode"
                android:background="@color/colorCodeLineNumber"
                android:id="@+id/tv_code_line_number"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@color/colorCodeEditor"
                android:text="Hello"
                android:cursorVisible="true"
                android:gravity="left|top"
                android:fontFamily="@font/firacode"
                android:inputType="textMultiLine"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:padding="@dimen/_4sdp"
                android:id="@+id/et_code"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:foreground="?android:selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_hide"
            android:text="@string/hide_it_text"
            android:id="@+id/btn_hide"
            android:paddingHorizontal="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_1sdp"
            android:background="@color/colorCodeOptionButton"
            />
        <Button
            android:foreground="?android:selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:drawableLeft="@drawable/ic_mdi_camera_alt"
            android:text="@string/code_from_text"
            android:id="@+id/btn_code_from_pic"
            android:layout_marginRight="@dimen/_1sdp"
            android:background="@color/colorCodeOptionButton"
            />
        <Button
            android:foreground="?android:selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_code_run"
            android:text="@string/run_text"
            android:id="@+id/btn_run"
            android:paddingHorizontal="@dimen/_5sdp"
            android:background="@color/colorCodeOptionButton"
            />

    </LinearLayout>

</LinearLayout>