<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.mainpage.QuizFragment">

    <LinearLayout
        android:background="@drawable/quiz_top_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        >

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_back"
            android:padding="@dimen/_15sdp"
            android:id="@+id/tv_back_btn"/>

        <TextView
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:text="HSC ICT Life"
            />

        <TextView
            android:visibility="gone"
            android:foreground="?android:selectableItemBackground"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_info"
            android:padding="@dimen/_15sdp"
            android:id="@+id/tv_info_btn"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quiz_start_text"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_start_right_arrow"
            android:foreground="?selectableItemBackground"
            android:paddingVertical="@dimen/_3sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/btn_start_quiz_exam"
            />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_select_quiz_exam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="?android:selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_exam_btn_text"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/_7sdp"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:background="@drawable/quiz_button_blank_bg"
            />

        <Button
            android:id="@+id/btn_select_quiz_exercise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:foreground="?android:selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_practice_btn_text"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/_7sdp"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold"
            android:background="@drawable/quiz_button_blank_bg"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_chapter_name_list"
        android:paddingBottom="@dimen/contentPaddingForBottomNav"
        android:layout_marginHorizontal="@dimen/_10sdp"/>




   <!-- <Button
        android:foreground="?android:selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_start_text"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:layout_gravity="center"
        android:drawableRight="@drawable/ic_start_right_arrow"
        android:drawablePadding="@dimen/_7sdp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:background="@drawable/quiz_button_blank_bg"
        />
-->


</LinearLayout>